# data-pipeline

./: .gitignore  CLAUDE.md  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: docs.yml
_plan/: plano-docs-mkdocs.md
docs/: index.md
docs/arquitetura/: dados-e-armazenamento.md  pipeline-batch.md  pipeline-realtime.md  visao-geral.md
docs/componentes/: data-publishing.md  embeddings.md  enrichment.md  federation.md  scraper.md  typesense-sync.md
docs/desenvolvimento/: adicionando-componente.md  contribuindo.md  setup-local.md
docs/operacoes/: monitoramento.md  runbooks.md  troubleshooting.md
docs/stylesheets/: extra.css
